--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 </head>
 
 <body>
+    <header>
+        <a href="/">
+            WebStudio
+        </a>
+        <ul>
+            <li><a href="">Студія</a></li>
+            <li>Портфоліо</li>
+            <li>Контакти</li>
+        </ul>
+        <ul>
+
+        </ul>
+        <li><a href="mailto:example@mail.ua">info@devstudio.com</a></li>
+        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
 
 </body>
 
