--- a/index.html
+++ b/index.html
@@ -10,21 +10,70 @@
 
 <body>
     <header>
-        <a href="/">
-            WebStudio
-        </a>
+        <nav>
+            <a href="/">
+                WebStudio
+            </a>
+            <ul>
+                <li><a href="">Студія</a></li>
+                <li>Портфоліо</li>
+                <li>Контакти</li>
+            </ul>
+        </nav>
         <ul>
-            <li><a href="">Студія</a></li>
-            <li>Портфоліо</li>
-            <li>Контакти</li>
+            <li><a href="mailto:example@mail.ua">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-        <ul>
 
-        </ul>
-        <li><a href="mailto:example@mail.ua">info@devstudio.com</a></li>
-        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
-        </ul>
     </header>
+    <div>
+        <section>
+            <h1>Ефективні рішення для </br> вашого бізнесу</h1>
+            <button tupe="button">Замовити послугу</button>
+        </section>
+    </div>
+    <section>
+        <!--Наші переваги-->
+        <ul>
+            <li>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li>
+                <h3>ПЛАНУВАННЯ</h3>
+                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+            <li>
+                <img src="./images/img1.jpg" alt="Додатки" width="370" height="294" />
+            </li>
+            <li>
+                <img src="./images/img2.jpg" alt="Мобільні аплікації" width="370" height="294">
+            </li>
+            <li>
+                <img src="./images/img3.jpg" alt="Дизайн" width="370" height="294">
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <img src="./images/" </li>
+        </ul>
+    </section>
 
 </body>
 
