--- a/index.html
+++ b/index.html
@@ -26,54 +26,85 @@
         </ul>
 
     </header>
-    <div>
+    <main>
+        <div>
+            <section>
+                <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
+                <button type="button">Замовити послугу</button>
+            </section>
+        </div>
         <section>
-            <h1>Ефективні рішення для </br> вашого бізнесу</h1>
-            <button tupe="button">Замовити послугу</button>
+            <!--Наші переваги-->
+            <ul>
+                <li>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
         </section>
-    </div>
-    <section>
-        <!--Наші переваги-->
-        <ul>
-            <li>
-                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li>
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </li>
-            <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-            <li>
-                <img src="./images/img1.jpg" alt="Додатки" width="370" height="294" />
-            </li>
-            <li>
-                <img src="./images/img2.jpg" alt="Мобільні аплікації" width="370" height="294">
-            </li>
-            <li>
-                <img src="./images/img3.jpg" alt="Дизайн" width="370" height="294">
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./images/" </li>
-        </ul>
-    </section>
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="./images/img1.jpg" alt="Додатки" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/img2.jpg" alt="Мобільні аплікації" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/img3.jpg" alt="Дизайн" width="370" height="294">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/img4.jpg" alt="Имя" width="270" height="260">
+                    <h4>Ігор Дем'яненко</h4>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img5.jpg" alt="Имя" width="270" height="260">
+                    <h4>Ольга Рєпіна</h4>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img6.jpg" alt="Имя" width="270" height="260">
+                    <h4>Микола Тарасов</h4>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img7.jpg" alt="Имя" width="270" height="260">
+                    <h4>Михайло Єрмаков</h4>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="/">
+            WebStudio
+        </a>
+        <address>
+            м. Київ, пр-т Лесі Українки, 26
+        </address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </footer>
+
 
 </body>
 
