--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -16,8 +16,8 @@
             </a>
             <ul>
                 <li><a href="">Студія</a></li>
-                <li>Портфоліо</li>
-                <li>Контакти</li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -27,14 +27,12 @@
 
     </header>
     <main>
-        <div>
-            <section>
-                <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
-                <button type="button">Замовити послугу</button>
-            </section>
-        </div>
         <section>
-            <!--Наші переваги-->
+            <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
+            <button type="button">Замовити послугу</button>
+        </section>
+        <section>
+            <h2>Наші переваги</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -73,22 +71,22 @@
             <ul>
                 <li>
                     <img src="./images/img4.jpg" alt="Имя" width="270" height="260">
-                    <h4>Ігор Дем'яненко</h4>
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img5.jpg" alt="Имя" width="270" height="260">
-                    <h4>Ольга Рєпіна</h4>
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img6.jpg" alt="Имя" width="270" height="260">
-                    <h4>Микола Тарасов</h4>
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img7.jpg" alt="Имя" width="270" height="260">
-                    <h4>Михайло Єрмаков</h4>
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -99,10 +97,14 @@
             WebStudio
         </a>
         <address>
-            м. Київ, пр-т Лесі Українки, 26
+            <ul>
+                <li>
+                    <p>м. Київ, пр-т Лесі Українки, 26</p>
+                </li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> <br /></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
 
 
