--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
         </a>
         <address>
             <ul>
-                <li>
-                    <p>м. Київ, пр-т Лесі Українки, 26</p>
+                <li><a href="">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> <br /></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
